--- a/LangchainGRAPH.ipynb
+++ b/LangchainGRAPH.ipynb
@@ -187,7 +187,7 @@
     "chat = ChatGroq(\n",
     "    temperature=0,\n",
     "    model=\"llama3-70b-8192\",\n",
-    "    api_key=\"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\" # Optional if not set as an environment variable\n",
+    "    api_key=\"\" # Optional if not set as an environment variable\n",
     ")"
    ]
   },
@@ -578,22 +578,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7864\n",
+      "Running on local URL:  http://127.0.0.1:7868\n",
       "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "Could not create share link. Please check your internet connection or our status page: https://status.gradio.app.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7868/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -606,7 +606,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -631,7 +631,7 @@
       "    result = context.run(func, *args)\n",
       "  File \"f:\\projects\\RAG_HIndex\\.venv\\lib\\site-packages\\gradio\\utils.py\", line 816, in wrapper\n",
       "    response = f(*args, **kwargs)\n",
-      "  File \"C:\\Users\\bhard\\AppData\\Local\\Temp\\ipykernel_22248\\3099472230.py\", line 11, in save_pdf\n",
+      "  File \"C:\\Users\\bhard\\AppData\\Local\\Temp\\ipykernel_22248\\2537863040.py\", line 11, in save_pdf\n",
       "    f.write(file.read())\n",
       "AttributeError: 'NamedString' object has no attribute 'read'\n"
      ]
@@ -715,7 +715,9 @@
     "\n",
     "# Gradio interface\n",
     "with gr.Blocks() as demo:\n",
-    "    gr.Markdown(\"## PDF Processing and Chatbot Interface\")\n",
+    "    gr.Markdown(\"\"\"\n",
+    "    <h2 style=\"color: #FF5033; font-family: Arial, sans-serif; text-align: center;\">DOCSENSE</h2>\n",
+    "    \"\"\")\n",
     "    \n",
     "    # PDF Upload and Display\n",
     "    pdf_file = gr.File(label=\"Upload PDF\", file_types=[\".pdf\"])\n",
@@ -739,7 +741,7 @@
     "    chatbot_button.click(chatbot, inputs=[chatbot_input, mode_selector,slider_input], outputs=chatbot_output)\n",
     "\n",
     "# Launch the interface\n",
-    "demo.launch()\n"
+    "demo.launch(share=True)\n"
    ]
   },
   {
